--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <div class="col-md-6 mb-2"><strong class="text-primary">Email:</strong> nirmalagehlot803@gmail.com</div>
                         <div class="col-md-6 mb-2"><strong class="text-primary">Location:</strong> Ajmer</div>
                     </div>
-                    <a href="resume.pdf" class="btn btn-primary mt-4">Download CV</a>
+                    <a href="resume.pdf" class="btn btn-primary mt-4">Download Resume</a>
                 </div>
                 <div class="col-lg-4 text-center mt-5 mt-lg-0">
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQceBwOfehjA_010TEjZvHn0Uji7lajhZri1Q&s" alt="About Image" class="img-fluid profile-img" style="width: 15rem; height: 15rem;">
@@ -363,4 +363,5 @@
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
+
 </html>
