--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <li class="nav-item"><a class="nav-link fw-bold js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link fw-bold js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link fw-bold js-scroll-trigger" href="#education">Education</a></li>
-                    <li class="nav-item"><a class="nav-link fw-bold js-scroll-trigger" href="#portfolio">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link fw-bold js-scroll-trigger" href="#portfolio">Project</a></li>
                     <li class="nav-item"><a class="nav-link fw-bold js-scroll-trigger" href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -156,7 +156,7 @@
 
     <section class="section-padding" id="skills">
         <div class="container">
-            <h2 class="display-5 fw-bold mb-5">Skill-<span class="text-primary">Set</span></h2>
+            <h2 class="display-5 fw-bold mb-5">Skill-</h2>
             
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6">
@@ -212,7 +212,6 @@
             </div>
         </div>
     </section>
----
     <section class="section-padding" id="portfolio">
         <div class="container">
             <h2 class="display-5 fw-bold text-center mb-5"> <span class="text-primary">Projects</span></h2>
@@ -243,8 +242,8 @@
                         <img class="card-img-top" src="images/7.jpg" alt="Project 3">
                         <div class="card-body text-center">
                             <h5 class="card-title fw-bold text-primary">SPACE DESIGN REDEFINED.</h5>
-                            <p class="card-text small text-white-50">Designed complete UI/UX using accessibility.</p>
-                            <a href="https://aarohiverma528-beep.github.io/n2/" class="btn btn-primary btn-sm mt-2">View Case Study</a>
+                            <p class="card-text small text-white-50">Designed complete UI using accessibility.</p>
+                            <a href="https://aarohiverma528-beep.github.io/n2/" class="btn btn-primary btn-sm mt-2">View Project</a>
                         </div>
                     </div>
                 </div>
@@ -374,4 +373,5 @@
 </body>
 
 </html>
+
 
