--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         body {
             background-color: var(--bs-body-bg);
             color: var(--bs-body-color);
-            font-family: 'Georgia', sans-serif;
+            font-family: 'Arial', sans-serif;
             scroll-padding-top: 70px;
         }
         
@@ -373,5 +373,6 @@
 </body>
 
 </html>
+
 
 
