--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script type="text/javascript">
-        $('.js-scroll-trigger').click(function () {
+        $('.js-scroll-trigger,body').click(function () {
             $('.navbar-collapse').collapse('hide');
         });
     </script>
@@ -154,7 +154,7 @@
         </div>
     </section>
 
-    <section class="section-padding" id="skills">
+    <section class="section-padding" id="skills" style="height:75vh">
         <div class="container">
             <h2 class="display-5 fw-bold mb-5">Skill</h2>
             
@@ -373,6 +373,7 @@
 </body>
 
 </html>
+
 
 
 
